--- a/src/pages/newtab.html
+++ b/src/pages/newtab.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Custom Homepage</title>
     <link rel="stylesheet" href="../style/styles.css">
+    <!-- Add Material Symbols font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
 <h1>Chrome Portal</h1>
